--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.6.3",
     "nodemon": "^2.0.20",
+    "pg": "^8.8.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "socket.io": "^4.5.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
