--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "pg": "^8.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "socket.io": "^4.5.4"
+    "react-router-dom": "^6.3.0",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
